# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
mypackage/: __init__.py
test/: test_init.py
